initial working version of wichtler

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,24 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore dev files
+.gemrc
+.ruby-version
+tags
+*.patch
+vendor/gems/
+
+# Ignore assets
+public/assets
+
+# Ignore secret tokens and configs
+config/database.yml
+config/initializers/action_mailer.rb
+config/initializers/device_config.rb
+config/initializers/devise_secret_token.rb
+config/initializers/secret_token.rb
+config/initializers/wichtler.rb
+config/secrets.yml
+db/seeds_live.rb
+db/seeds_dev.rb
